syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;

service StudentPaymentService {
    rpc Create(CreateStudentPayment) returns (GetStudentPayment) {}
    rpc GetByID(StudentPaymentPrimaryKey) returns (GetStudentPayment) {}
    rpc GetList(GetListStudentPaymentRequest) returns (GetListStudentPaymentResponse) {}
    rpc Update(UpdateStudentPayment) returns (GetStudentPayment) {}
    rpc Delete(StudentPaymentPrimaryKey) returns (EmptyStudentPayment) {}
}

message EmptyStudentPayment {}

message StudentPayment {
    string id = 1;
    string student_id = 2;
    string group_id = 3;
    int64 paidsum = 4;
    string administration_id = 5;
    string created_at = 6;
    string updated_at = 7;
    int32 deleted_at = 8;
}
  
message StudentPaymentPrimaryKey {
    string id = 1;
}
  
message CreateStudentPayment {
    string student_id = 2;
    string group_id = 3;
    int64 paidsum = 4;
    string administration_id = 5;
}
  
message GetStudentPayment {
    string id = 1;
    string student_id = 2;
    string group_id = 3;
    int64 paidsum = 4;
    string administration_id = 5;
    string created_at = 6;
    string updated_at = 7;
    int32 deleted_at = 8;
}
  
message UpdateStudentPayment {
    string id = 1;
    string student_id = 2;
    string group_id = 3;
    int64 paidsum = 4;
    string administration_id = 5;
}
  
message GetListStudentPaymentRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}
  
message GetListStudentPaymentResponse {
    int64 count = 1;
    repeated StudentPayment student_payments = 2;
}
  
 